Created a layout for main screen and hat of site [non-adaptive]

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,14 @@
-*
-  box-sizing: border-box
+// base grid settings
+@import 'grid'
+// font settings
+@import 'fonts'
+// color settings
+@import 'colors'
+// interface settings
+@import 'interface'
+
+// Шапка сайта
+@import 'blocks/navbar'
+
+// Block hero
+@import 'blocks/hero'
