--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,7 +3,7 @@ body
   color: text-color
 .button-o
   border: 2px solid $primary
-  background-color: transparent
+  background-color: #fff
   padding: 17px 22px
   font-size: 12px
   text-transform: uppercase
@@ -15,3 +15,6 @@ body
   padding: 25px 45px
   background-color: $primary
   color: #fff
+@media (max-width: 576px)
+  .button-o
+    font-style: 10px
