--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,8 +1,8 @@
 .hero
   width: 100%
-  background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top 80px
+  background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top 60px
   background-size: contain
-  padding-top: 180px
+  padding-top: 130px
   padding-bottom: 270px
   &__title
     font-size: 30px
@@ -10,5 +10,9 @@
   &__subtitle
     display: block
     font-size: 30px
-    margin-bottom: 67px
+    margin-bottom: 40px
     +bold
+@media (max-width: 991px)
+  .hero
+    background-size: cover
+    background-position: top left 20%
