--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -8,7 +8,6 @@
     display: flex
     align-items: center
     justify-content: space-between
-    min-height: 80px
   &__mobile, &__landline
     text-align: right
   &__phone
@@ -33,7 +32,7 @@
   background-color: $primary
   color: #fff
   transition: 0.2s
-  transform: translateY(-100%)
+  transform: translateY(-200%)
   &_active
     transform: translateY(0)
   &__nav
@@ -55,7 +54,7 @@
    border: none
    border-right: 1px solid rgba(#510bba, 0.1)
    border-left: 1px solid rgba(#510bba, 0.1)
-   height: 80px
+   height: 60px
    width: 70px
    &__line
      width: 20px
@@ -73,3 +72,18 @@
     display: block
     font-size: 14px
     color: $text-color-light
+@media (max-width: 991px)
+  .navbar
+    &__mobile, &__landline
+      display: none
+@media (max-width: 576px)
+  .logo
+    display: none
+  .menu
+    top: 60px
+    &-button
+      height: 60px
+    &__nav
+      flex-direction: column
+    &__link
+      margin-bottom: 20px
