--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,9 +1,10 @@
 .hero
   width: 100%
-  background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top 60px
+  background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top
   background-size: contain
-  padding-top: 130px
+  padding-top: 120px
   padding-bottom: 270px
+  margin-top: 60px
   &__title
     font-size: 30px
     margin-bottom: 40px
