--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -15,6 +15,32 @@ body
   padding: 25px 45px
   background-color: $primary
   color: #fff
+.bg-secondary
+  background: $bg-secondary
+.input
+  height: 80px
+  padding-left: 30px
+  border: 1px solid #dddddd
+  &::focus
+    border: 1px solid $primary
+input[type="checkbox"]
+  display: none
+  &:checked + label::before
+    background-color: $primary
+.checkbox
+  &-label
+    display: flex
+    align-items: center
+    margin-right: 40px
+    &::hover
+      cursor: pointer
+    &::before
+      content: ''
+      display: inline-block
+      width: 30px
+      height: 30px
+      border: 1px solid #dddddd
+      margin-right: 20px
 @media (max-width: 576px)
   .button-o
     font-style: 10px
