--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,7 +1,7 @@
 .hero
   width: 100%
   background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top
-  background-size: contain
+  background-size: cover
   padding-top: 120px
   padding-bottom: 270px
   margin-top: 60px
