--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,3 +18,9 @@
 
 // Block features
 @import 'blocks/features'
+
+// Block catalog
+@import 'blocks/catalog'
+
+// Block blog-list
+@import 'blocks/blog-list'
