--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ img {
   font-family: "Proxima Nova Semibold", sans-serif;
 }
 
+.button:hover {
+  cursor: pointer;
+}
+
 .button-fitting {
   color: #507fe1;
   background-color: #fff;
@@ -137,7 +141,7 @@ input[type="checkbox"]:checked + label::before {
   margin-right: 40px;
 }
 
-.checkbox-label::hover {
+.checkbox-label:hover {
   cursor: pointer;
 }
 
@@ -150,6 +154,9 @@ input[type="checkbox"]:checked + label::before {
 }
 
 @media (max-width: 576px) {
+  .button {
+    font-size: 10px;
+  }
   .button-o {
     font-size: 10px;
   }
@@ -167,6 +174,7 @@ input[type="checkbox"]:checked + label::before {
   top: 0;
   width: 100%;
   background-color: #fff;
+  z-index: 99;
 }
 
 .navbar-wrap {
@@ -204,7 +212,7 @@ input[type="checkbox"]:checked + label::before {
 
 .menu {
   position: fixed;
-  z-index: 0;
+  z-index: 99;
   top: 80px;
   width: 100%;
   padding: 16px 0;
@@ -445,6 +453,21 @@ input[type="checkbox"]:checked + label::before {
   }
 }
 
+@media (max-width: 480px) {
+  .form__row-checkbox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .form__checkbox {
+    margin-bottom: 20px;
+  }
+}
+
 .features-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -558,6 +581,7 @@ input[type="checkbox"]:checked + label::before {
   }
   .catalog-card {
     max-width: 470px;
+    margin: 20px;
   }
 }
 
@@ -631,6 +655,85 @@ input[type="checkbox"]:checked + label::before {
   .blog-list__card {
     margin-right: 30px;
     margin-left: 30px;
+  }
+}
+
+.price-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.price-block__card {
+  margin-bottom: 10px;
+}
+
+.price-card {
+  background-color: #fff;
+  position: relative;
+}
+
+.price-card__text {
+  padding: 20px;
+  font-size: 15px;
+}
+
+.price-card__title {
+  margin: 0;
+}
+
+.price-card__cost {
+  font-family: "Proxima Nova Semibold", sans-serif;
+}
+
+.price-card__pricetag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.price-card__button {
+  text-align: center;
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+  height: 80px;
+  padding: 20px;
+  padding-top: 0;
+}
+
+.price-card:hover .price-card__button {
+  z-index: 99;
+  bottom: -80px;
+}
+
+@media (max-width: 991px) {
+  .price-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .price-block__card {
+    margin: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .price-block__card {
+    margin: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
