--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -29,6 +29,8 @@ img
   background-color: $primary
   color: #fff
   +bold
+  &:hover
+    cursor: pointer
   &-fitting
     color: $primary
     background-color: #fff
@@ -58,7 +60,7 @@ input[type="checkbox"]
     display: flex
     align-items: center
     margin-right: 40px
-    &::hover
+    &:hover
       cursor: pointer
     &::before
       content: ''
@@ -67,8 +69,10 @@ input[type="checkbox"]
       border: 1px solid #dddddd
       margin-right: 20px
 @media (max-width: 576px)
-  .button-o
+  .button
     font-size: 10px
+    &-o
+      font-size: 10px
   .section
     padding: 60px 0
     &-title
