--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,7 @@ input[type="checkbox"]:checked + label::before {
   bottom: -80px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .price-block {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -734,6 +734,72 @@ input[type="checkbox"]:checked + label::before {
 @media (max-width: 400px) {
   .price-block__card {
     margin: 10px;
+  }
+}
+
+.step {
+  position: relative;
+  text-align: center;
+}
+
+.steps {
+  background-color: #f5f6f8;
+}
+
+.steps-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.step__image {
+  height: 100px;
+}
+
+.step__title {
+  font-size: 18px;
+}
+
+.step:last-child::before {
+  display: none;
+}
+
+.step::before {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: rgba(126, 123, 120, 0.6);
+  display: block;
+  position: absolute;
+  top: 32%;
+  right: -64%;
+}
+
+.step__text {
+  margin: auto;
+  max-width: 160px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 991px) {
+  .step {
+    -ms-flex-preferred-size: 33%;
+        flex-basis: 33%;
+  }
+  .step::before {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .step {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
