--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,5 +1,6 @@
 $text-color: #262626
 $text-color-light: #7b7b79
-$primary: #507fe1
-$primary-secondary: #eb5066
+$primary: #ff5666
+$primary-old: #507fe1
+$secondary: #eb5066
 $bg-secondary: #f1f1f1f1
