--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,3 +30,9 @@
 
 // Block steps
 @import 'blocks/steps'
+
+// Block reviews
+@import 'blocks/reviews'
+
+// Block factory
+@import 'blocks/factory'
