--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -55,14 +55,14 @@
    justify-content: center
    background-color: transparent
    border: none
-   border-right: 1px solid rgba(#510bba, 0.1)
-   border-left: 1px solid rgba(#510bba, 0.1)
+   border-right: 1px solid rgba($secondary, 0.1)
+   border-left: 1px solid rgba($secondary, 0.1)
    height: 60px
    width: 70px
    &__line
      width: 20px
      height: 3px
-     background: #89a9eb
+     background: #eb8989
      margin: 2px 0
 .logo
   &__text
