Added block 'Contacts' with adaptive

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,29 +10,15 @@
 // Шапка сайта
 @import 'blocks/navbar'
 
-// Block hero
+// Blocks
 @import 'blocks/hero'
 
-// Block offer
 @import 'blocks/offer'
-
-// Block features
 @import 'blocks/features'
-
-// Block catalog
 @import 'blocks/catalog'
-
-// Block blog-list
 @import 'blocks/blog-list'
-
-// Block price
 @import 'blocks/price'
-
-// Block steps
 @import 'blocks/steps'
-
-// Block reviews
 @import 'blocks/reviews'
-
-// Block factory
 @import 'blocks/factory'
+@import 'blocks/contacts'
