--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,6 +1,6 @@
 $text-color: #262626
 $text-color-light: #7b7b79
-$primary: #ff5666
+$primary: #d41715
 $primary-old: #507fe1
-$secondary: #eb5066
+$secondary: #e73650
 $bg-secondary: #f1f1f1f1
