--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,3 +22,7 @@
 @import 'blocks/reviews'
 @import 'blocks/factory'
 @import 'blocks/contacts'
+@import 'blocks/questions'
+
+// Footer:
+@import 'blocks/footer'
