--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -2,5 +2,5 @@ $text-color: #262626
 $text-color-light: #7b7b79
 $primary: #d41715
 $primary-old: #507fe1
-$secondary: #e73650
+$secondary: #eb5066
 $bg-secondary: #f1f1f1f1
