--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,6 +1,7 @@
 $text-color: #262626
 $text-color-light: #7b7b79
-$primary: #d41715
+$primary: #ea4543
 $primary-old: #507fe1
-$secondary: #eb5066
+$secondary: #e46a69
+$outline: #8f0d0a
 $bg-secondary: #f1f1f1f1
