--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -27,7 +27,7 @@
 .menu
   position: fixed
   z-index: 99
-  top: 80px
+  top: 60px
   width: 100%
   padding: 16px 0
   background-color: $primary
@@ -59,6 +59,10 @@
    border-left: 1px solid rgba($secondary, 0.1)
    height: 60px
    width: 70px
+   &:hover
+     cursor: pointer
+   &:focus
+     outline: none
    &__line
      width: 20px
      height: 3px
