--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,8 @@
 @import 'colors'
 // interface settings
 @import 'interface'
+// Slick slider
+@import 'slick'
 
 // Шапка сайта
 @import 'blocks/navbar'
@@ -19,6 +21,7 @@
 @import 'blocks/blog-list'
 @import 'blocks/price'
 @import 'blocks/steps'
+@import 'blocks/before'
 @import 'blocks/reviews'
 @import 'blocks/factory'
 @import 'blocks/contacts'
